center about text

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-4 text-center">
                     <p>Analytical chemist turned data scientist with a strong statistics background and experience in machine learning, NLP, and Python. Passionate about using data to improve business decisions, work productivity, and everything in-between.  A frequent speaker at data science meetups and events.</p>
                 </div>
 
